[workspace]
resolver = "2"
members = [
    # arch
    "arch",

    # crates
    # "crates/backtrace",
    "crates/*",

    # modules
    "modules/logging",
    "modules/devices",
    "modules/frame_allocator",
    "modules/sync",
    "modules/hal",
    "modules/fs",
    "modules/devfs",
    "modules/ramfs",
    "modules/procfs",
    "modules/executor",
    "modules/signal",

    #drivers
    "drivers/*",

    # kernel
    "kernel"
]

[profile.release]
debug = true

[workspace.dependencies]
arch = { path = "arch" }
