[package]
name = "arch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
board-k210 = []
board-qemu = []
board-cv1811h = []
# default = ["board-cv1811h"]

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
log = "0.4"
bitflags = "2.0.2"
cfg-if = "1.0.0"
