[package]
name = "arch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
kcontext = []

[dependencies]
log = "0.4"
fdt = "0.1.5"
bitflags = "2.0.2"
cfg-if = "1.0.0"
crate_interface = { git = "https://github.com/Byte-OS/crate_interface.git" }
percpu = { git = "https://github.com/Byte-OS/percpu.git"}

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
sbi-rt = { version = "0.0.2", features = ["legacy"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
x86_64 = "0.14"
spin = { version = "0.9.8", features = ["mutex"] }
irq_safety = { git = "https://github.com/theseus-os/irq_safety.git"}
multiboot = "0.8.0"
x2apic = "0.4"
raw-cpuid = "11.0"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.3"
arm_pl011 = { git = "https://github.com/Byte-OS/arm_pl011.git" }
tock-registers = "0.8"
irq_safety = { git = "https://github.com/theseus-os/irq_safety.git"}
arm_gic = { git = "https://github.com/Byte-OS/arm_gic" }

[target.'cfg(target_arch = "loongarch64")'.dependencies]
spin = { version = "0.9.8", features = ["mutex"] }
loongarch64 = {git = "https://github.com/Godones/loongArch64",package = "loongarch64" }
