[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polyhal = { workspace = true }
sync = { workspace = true }
log = "0.4"
downcast-rs = { version = "2.0.1", default-features = false, features = [
  "sync",
] }
hashbrown = "0.14"
