[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buddy_system_allocator = "0.9"
log = "0.4"
bit_field = "0.10.1"
polyhal = { git = "https://github.com/Byte-OS/polyhal.git" }
sync = { workspace = true }
