[package]
name = "kcvitek-sd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devices = { git = "https://github.com/Byte-OS/devices.git" }
log = "0.4"
cv1811-sd = { git = "https://github.com/Byte-OS/cv1811-sd.git" }
