[package]
name = "kgoldfish-rtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devices = { git = "https://github.com/Byte-OS/devices.git" }
log = "0.4"
timestamp = { git = "https://github.com/Byte-OS/timestamp.git" }
