[package]
name = "knvme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
devices = { git = "https://github.com/Byte-OS/devices.git" }
log = "0.4"
nvme_driver = { git = "https://github.com/rcore-os/nvme_driver", rev = "8ae0572" }
