[package]
name = "kramdisk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
sync = { path = "../../modules/sync" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "61ece50"}
kheader = { path = "../../modules/kheader" }
devices = { path = "../../modules/devices" }
frame_allocator = { path = "../../modules/frame_allocator" }
