[package]
name = "kvirtio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch = { path = "../../arch" }
fdt = "0.1.5"
log = "0.4"
sync = { path = "../../modules/sync" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "f1d1cbb"}
kheader = { path = "../../modules/kheader" }
devices = { path = "../../modules/devices" }
frame_allocator = { path = "../../modules/frame_allocator" }