[package]
name = "kvirtio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "61ece50"}
devices = { git = "https://github.com/Byte-OS/devices.git" }
