[package]
name = "ns16550a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ns16550a = "0.2"
arch = { path = "../../arch" }
fdt = "0.1.5"
log = "0.4"
sync = { path = "../../modules/sync" }
kheader = { path = "../../modules/kheader" }
devices = { path = "../../modules/devices" }
frame_allocator = { path = "../../modules/frame_allocator" }