[package]
name = "devfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfscore = { git = "https://github.com/Byte-OS/vfscore.git" }
logging = { git = "https://github.com/Byte-OS/logging.git" }
devices = { git = "https://github.com/Byte-OS/devices.git" }
log = "0.4"
sync = { git = "https://github.com/Byte-OS/sync.git" }
bitflags = "2.0.2"
num-traits = { version = "0.2", default-features = false}
num-derive = "0.4"
hal = { git = "https://github.com/Byte-OS/hal.git" }