[package]
name = "devices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
nvme = ["dep:nvme_driver"]

default = []

[dependencies]
arch = { path = "../../arch" }
fdt = "0.1.5"
log = "0.4"
sync = { path = "../sync" }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "f1d1cbb"}
kheader = { path = "../kheader" }
frame_allocator = { path = "../frame_allocator" }
timestamp = { path = "../../crates/timestamp" }
nvme_driver = { git = "https://github.com/rcore-os/nvme_driver", rev = "8ae0572", optional = true }
kmacros = { path = "../kmacros" }
