[package]
name = "executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-queue = { version = "0.3.8", default-features = false, features = ["alloc"] }
logging = { path = "../logging" }
arch = { git = "https://github.com/Byte-OS/arch.git" }
sync = { path = "../sync" }
frame_allocator = { path = "../frame_allocator" }
log = "0.4"
fs = { path = "../fs" }
devfs = { path = "../devfs" }
futures = { version = "0.3", default-features = false }
signal = { git = "https://github.com/Byte-OS/signal.git" }
bitflags = "2.0.2"
vfscore = { git = "https://github.com/Byte-OS/vfscore.git" }
hal = { path = "../hal" }
crate_interface = { git = "https://github.com/Byte-OS/crate_interface.git" }
