[package]
name = "fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
vfscore = { path = "../../crates/vfscore" }
sync = { path = "../sync" }
devices = { path = "../devices" }
logging = { path = "../logging" }
devfs = { path = "../devfs" }
ramfs = { path = "../ramfs" }
procfs = { path = "../procfs" }
frame_allocator = { path = "../frame_allocator" }
arch = { path = "../../arch" }

[dependencies.fatfs]
git = "https://github.com/byte-os/rust-fatfs.git"
# rev = "a3a834e"
default-features = false
features = [
    "alloc",
    "lfn",
    "log_level_trace",
    "unicode",
]