[package]
name = "fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
vfscore = { git = "https://github.com/Byte-OS/vfscore.git" }
sync = { path = "../sync" }
devices = { path = "../devices" }
logging = { path = "../logging" }
devfs = { path = "../devfs" }
ramfs = { path = "../ramfs" }
procfs = { path = "../procfs" }
frame_allocator = { path = "../frame_allocator" }
arch = { git = "https://github.com/Byte-OS/arch.git" }

[dependencies.fatfs]
git = "https://github.com/byte-os/rust-fatfs.git"
# rev = "a3a834e"
default-features = false
features = [
    "alloc",
    "lfn",
    "unicode",
]
