[package]
name = "hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch = { path = "../../arch" }
log = "0.4"
frame_allocator = { path = "../frame_allocator" }
devices = { path = "../devices" }
sync = { path = "../sync" }