[package]
name = "hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arch = { git = "https://github.com/Byte-OS/arch.git" }
log = "0.4"
frame_allocator = { git = "https://github.com/Byte-OS/bit_frame_allocator.git" }
devices = { path = "../devices" }
sync = { git = "https://github.com/Byte-OS/sync.git" }
