[package]
name = "logging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
arch = { git = "https://github.com/Byte-OS/arch.git" }
devices = { path = "../devices" }
sync = { path = "../sync" }
