[package]
name = "procfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vfscore = { git = "https://github.com/Byte-OS/vfscore.git" }
sync = { path = "../sync" }
arch = { git = "https://github.com/Byte-OS/arch.git" }
log = "0.4"